--- a/doc/ppt.tex
+++ b/doc/ppt.tex
@@ -57,8 +57,7 @@
         \only<1> {
             \item OpenRTMFP@github
                 \begin{itemize}
-                    \item 作者是个法国人
-                    \item xserver = 130+个文件/21k+行飘逸的C++代码
+                    \item xserver = 130+个文件/21k+行C++代码
                 \end{itemize}
         }
         \only<2> {
